--- a/pale-parallax/src/layouts/Layout.astro
+++ b/pale-parallax/src/layouts/Layout.astro
@@ -141,7 +141,7 @@ const { title, description, metaRobots } = options
             '@type': 'Person',
             name: 'Felix Icaza',
             url: 'https://felixicaza.com',
-            image: 'https://felixicaza.com/img/emadiaz.JPG',
+            image: 'https://felixicaza.com/img/emadiaz.jpg',
             sameAs: [
               'https://felixicaza.com',
               'https://www.upwork.com/freelancers/felixicaza',
