--- a/pale-parallax/src/pages/_home/About.astro
+++ b/pale-parallax/src/pages/_home/About.astro
@@ -1,5 +1,5 @@
 ---
-import emadiaz from '@images/emadiaz.JPG'
+import felixicaza from '@images/emadiaz.JPG'
 import { Picture } from 'astro:assets'
 import { t } from 'i18n:astro'
 
@@ -19,7 +19,7 @@ const normalizeTitle = title
   <section class="info">
     <div class="picture">
       <Picture
-        src={emadiaz}
+        src={felixicaza}
         alt="Felix Icaza"
         width={366}
         height={361}
